add some new feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=Sangam@123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
+springdoc.swagger-ui.path=/swagger-ui.html
+
